# ccpd-new

./: .gitignore  main.ipynb  main.py  pyproject.toml  test.py
utils/: cv_puttext.py
